cluster/local/jupyterhub/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: ${jupyter_hub_namespace}
    lsc-sde.io/injectKeycloakCertificates: "true"
    lsc-sde.io/injectJupyterCertificates: "true"
  name: ${jupyter_hub_namespace}
