cluster/local/jupyterhub/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect : "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect : "true"
    xlscsde.nhs.uk/dns-record: jupyter
spec:
  ingressClassName: nginx
  rules:
  - host: jupyterhub.lsc-sde.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: proxy-public
            port: 
              name: http
  tls:
  - hosts:
    - jupyterhub.lsc-sde.local
    secretName: jupyterhub.lsc-sde.local-tls
